experiment-chart/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: experiment-ingress
spec:
  rules:
    - host: app.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
